修改rewrite中的url为Antisunny/network-rules

--- a/quantumult-x/rewrites/meitu-xiuxiu.conf
+++ b/quantumult-x/rewrites/meitu-xiuxiu.conf
@@ -1,2 +1,5 @@
-^https?:\/\/((h5|api)\.xiuxiu|api-sub|api\.posters)\.meitu\.com\/.+\/(vip|user|h\d|center|home) url script-response-body 
+[rewrite_local]
+^https?:\/\/((h5|api)\.xiuxiu|api-sub|api\.posters)\.meitu\.com\/.+\/(vip|user|h\d|center|home) url script-response-body https://raw.githubusercontent.com/Antisunny/network-rules/main/quantumultx-x/scripts/meitu-xiuxiu.js
+
+[mitm]
 hostname = *.xiuxiu.meitu.com, api.posters.meitu.com, api-sub.meitu.com
