--- a/quantumult-x/rewrites/craft-note.conf
+++ b/quantumult-x/rewrites/craft-note.conf
@@ -1,2 +1,5 @@
-hostname = api.craft.do
-^https?:\/\/(api|docs)\.craft\.do\/(api\/)?(auth\/v\d\/profile|subscription\/(receipt|teams\/get-subscriptions)) url script-response-body https://raw.githubusercontent.com/chxm1023/Rewrite/main/Craft.js
+[mitm]
+hostname = api.craft.do,docs.craft.do
+
+[rewrite_local]
+^https?:\/\/(api|docs)\.craft\.do\/(api\/)?(auth\/v\d\/profile|subscription\/(receipt|teams\/get-subscriptions)) url script-response-body https://raw.githubusercontent.com/Antisunny/network-rules/main/quantumultx-x/scripts/craft-note.js
