--- a/quantumult-x/rewrites/endel.conf
+++ b/quantumult-x/rewrites/endel.conf
@@ -2,4 +2,4 @@
 hostname = api-production.endel.io
 
 [rewrite_local]
-^https?:\/\/api-production\.endel\.io\/v\d\/call url script-response-body {QPS}/edel.js
+^https?:\/\/api-production\.endel\.io\/v\d\/call url script-response-body https://raw.githubusercontent.com/Antisunny/network-rules/main/quantumultx-x/scripts/edel.js
