--- a/quantumult-x/rewrites/hyperweb-safari-plugin.conf
+++ b/quantumult-x/rewrites/hyperweb-safari-plugin.conf
@@ -1,2 +1,5 @@
-hostname = zy6kcqa01a.execute-api.us-east-2.amazonaws.com
+[mitm]
+hostname = zy6kcqa01a.execute-api.us-east-2.amazonaws.com
+
+[rewrite_local]
 https?:\/\/zy6kcqa01a\.execute-api\.us-east-2\.amazonaws\.com\/prod\/verifyReceipt url script-response-body https://raw.githubusercontent.com/chxm1023/Rewrite/main/Hyperweb.js
