--- a/quantumult-x/rewrites/kakamobi.conf
+++ b/quantumult-x/rewrites/kakamobi.conf
@@ -1,2 +1,5 @@
-^https?:\/\/.*\.kakamobi\.cn\/api\/open url script-response-body https://raw.githubusercontent.com/chxm1023/Rewrite/main/jiakaobaodian.js
+[mitm]
 hostname = *.kakamobi.cn
+
+[rewrite_local]
+^https?:\/\/.*\.kakamobi\.cn\/api\/open url script-response-body https://raw.githubusercontent.com/Antisunny/network-rules/main/quantumultx-x/scripts/kakamobi.js
