--- a/quantumult-x/rewrites/moji-jisho.conf
+++ b/quantumult-x/rewrites/moji-jisho.conf
@@ -1,2 +1,5 @@
+[rewrite_local]
 ^https:\/\/api\.mojidict\.com\/parse\/functions\/getNPrivileges url script-response-body https://raw.githubusercontent.com/Antisunny/network-rules/main/quantumultx-x/scripts/moji-jisho.js
+
+[mitm]
 hostname = api.mojidict.com
