--- a/quantumult-x/rewrites/netease-wndsh.conf
+++ b/quantumult-x/rewrites/netease-wndsh.conf
@@ -1,2 +1,5 @@
+[rewrite_local]
 ^https?:\/\/p\.du\.163\.com\/gain\/readtime\/info url script-response-body https://raw.githubusercontent.com/Antisunny/network-rules/main/quantumultx-x/scripts/netease-wndsh.js
+
+[mitm]
 hostname = p.du.163.com
